feat: begin rewrite of configs Currently needs new tests and to finish syncing